# BirdCLEF2026

./: .gitignore  README.md  main.py  pyproject.toml
docs/: installation.md
src/: check_dataset.py  examine_data.ipynb
